# rust-practice

./: README.md
belajar-rust-concurrency/: Cargo.toml
belajar-rust-concurrency/src/: main.rs  main_test.rs
belajar-rust-crate/belajar-rust-crate/: Cargo.toml
belajar-rust-crate/belajar-rust-crate/bye/src/: lib.rs
belajar-rust-crate/belajar-rust-crate/hello/src/: lib.rs
belajar-rust-crate/belajar-rust-crate/src/: main.rs
belajar-rust-crate/belajar-rust-crate/src/helper/: helper.rs
belajar-rust-crate/say-hello/: Cargo.toml
belajar-rust-crate/say-hello/src/: lib.rs
belajar-rust-dasar/src/: first.rs  main.rs  model.rs  second.rs  third.rs
belajar-rust-database/: .env  Cargo.toml
belajar-rust-database/migrations/: 20241206083708_create_table_categories.up.sql  20241206083743_create_table_brands.up.sql
belajar-rust-database/src/: main.rs  main_test.rs
belajar-rust-database/src/model/: mod.rs
belajar-rust-date-time/: Cargo.toml
belajar-rust-date-time/src/: main_test.rs
belajar-rust-logging/: Cargo.toml  log4rs.yaml
belajar-rust-logging/src/: main_test.rs
belajar-rust-redis/: Cargo.toml
belajar-rust-redis/src/: main_test.rs
belajar-rust-unit-test/hello/src/: lib.rs
belajar-rust-unit-test/hello/tests/: say_hello.rs
belajar-rust-unit-test/src/: main.rs  main_test.rs
belajar-rust-unit-test/src/helper/: helper.rs  mod.rs
